1. Collection API Улучшения[#164417]