@@ -2,6 +2,7 @@ package ru.job4j.list;
 
 import org.junit.Test;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import static org.hamcrest.core.Is.is;
 import static org.junit.Assert.assertThat;
@@ -14,7 +15,7 @@ public class ConvertMatrix2ListTest {
                 {1, 2},
                 {3, 4}
         };
-        List<Integer> expect = Arrays.asList(
+        List<Integer> expect = List.of(
                 1, 2, 3, 4
         );
         List<Integer> result = list.toList(input);
@@ -27,7 +28,7 @@ public class ConvertMatrix2ListTest {
                 {1, 2, 3, 4, 5},
                 {3, 4, 0, 0, 0}
         };
-        List<Integer> expect = Arrays.asList(
+        List<Integer> expect = List.of(
                 1, 2, 3, 4, 5, 3, 4, 0, 0, 0
         );
         List<Integer> result = list.toList(input);
@@ -39,7 +40,7 @@ public class ConvertMatrix2ListTest {
         int[][] input = {
                 {1}
         };
-        List<Integer> expect = Arrays.asList(
+        List<Integer> expect = List.of(
                 1
         );
         List<Integer> result = list.toList(input);
